--- a/dev/sass/style.scss
+++ b/dev/sass/style.scss
@@ -1,8 +1,8 @@
 /*
 * @Author: admin
 * @Date:   2017-05-20 15:14:02
-* @Last Modified by:   admin
-* @Last Modified time: 2017-06-24 22:53:31
+* @Last Modified by:   konstantinkuchernko
+* @Last Modified time: 2017-07-04 22:01:20
 */
 
 @import 'utils/variables';
@@ -10,6 +10,8 @@
 @import "../../bootstrap-sass/assets/stylesheets/bootstrap.scss";
 
 @import 'vendors/slick.scss';
+@import 'vendors/animsition.scss';
+
 
 @import 'base/typography';
 @import 'base/base';
